Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96288

QTextEdit cursor postion error when QTextEdit has different pointsize

XMLWordPrintable

    • Linux/X11
    • 33238ea2c63b372ee8795eaafbfc5a859a778f8d (qt/qtbase/dev) bddb0416aef8a918f0f0686a00c4c47c0ea3fa7e (qt/qtbase/6.2)

      when QTextEdit has different pointsize, the current cursor position is not right. see error.mp4   and   bug demo.

       

       

        1. error.mp4
          585 kB
          kingderzhang
        2. textedit.7z
          7 kB
          kingderzhang
        For Gerrit Dashboard: QTBUG-96288
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            kingderzhang kingderzhang
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: